--- a/source/YTD.dproj
+++ b/source/YTD.dproj
@@ -100,7 +100,6 @@
 			<DCCReference Include="Downloaders\downBritishPathe.pas"/>
 			<DCCReference Include="Downloaders\downBTVCz.pas"/>
 			<DCCReference Include="Downloaders\downCasSk.pas"/>
-			<DCCReference Include="Downloaders\downCekniTo.pas"/>
 			<DCCReference Include="Downloaders\downCeskeDrahy.pas"/>
 			<DCCReference Include="Downloaders\downCesnet.pas"/>
 			<DCCReference Include="Downloaders\downCKKlic.pas"/>
@@ -111,16 +110,15 @@
 			<DCCReference Include="Downloaders\downCollegeHumor.pas"/>
 			<DCCReference Include="Downloaders\downCriticalPast.pas"/>
 			<DCCReference Include="Downloaders\downCT.pas"/>
+			<DCCReference Include="Downloaders\downCT_wrapper.pas"/>
 			<DCCReference Include="Downloaders\downCurrent.pas"/>
 			<DCCReference Include="Downloaders\downDailyHaha.pas"/>
-			<DCCReference Include="Downloaders\downDailyMotion.pas"/>
 			<DCCReference Include="Downloaders\downDeutscheBahn.pas"/>
 			<DCCReference Include="Downloaders\downDenik.pas"/>
 			<DCCReference Include="Downloaders\downDevilDucky.pas"/>
 			<DCCReference Include="Downloaders\downDokumentarniTV.pas"/>
 			<DCCReference Include="Downloaders\downDotSub.pas"/>
 			<DCCReference Include="Downloaders\downDoubleAgent.pas"/>
-			<DCCReference Include="Downloaders\downDrsnySvet.pas"/>
 			<DCCReference Include="Downloaders\downDUB.pas"/>
 			<DCCReference Include="Downloaders\downEbaumsWorld.pas"/>
 			<DCCReference Include="Downloaders\downEHow.pas"/>
@@ -156,12 +154,10 @@
 			<DCCReference Include="Downloaders\downHokejCz.pas"/>
 			<DCCReference Include="Downloaders\downHrej.pas"/>
 			<DCCReference Include="Downloaders\downIConcerts.pas"/>
-			<DCCReference Include="Downloaders\downIDnes_Embed.pas"/>
 			<DCCReference Include="Downloaders\downIDnes.pas"/>
 			<DCCReference Include="Downloaders\downIHned.pas"/>
 			<DCCReference Include="Downloaders\downILikeBike.pas"/>
 			<DCCReference Include="Downloaders\downIPrima.pas"/>
-			<DCCReference Include="Downloaders\downIPrima_ShowJanaKrause.pas"/>
 			<DCCReference Include="Downloaders\downIViewTube.pas"/>
 			<DCCReference Include="Downloaders\downJenProZeny.pas"/>
 			<DCCReference Include="Downloaders\downJoj.pas"/>
@@ -222,7 +218,6 @@
 			<DCCReference Include="Downloaders\downNRSR.pas"/>
 			<DCCReference Include="Downloaders\downOckoTV.pas"/>
 			<DCCReference Include="Downloaders\downOKTeam.pas"/>
-			<DCCReference Include="Downloaders\downOldStream.pas"/>
 			<DCCReference Include="Downloaders\downOsobnostiCZ.pas"/>
 			<DCCReference Include="Downloaders\downOverStream.pas"/>
 			<DCCReference Include="Downloaders\downOwn3D_Embed.pas"/>
@@ -230,13 +225,11 @@
 			<DCCReference Include="Downloaders\downPCPlanets.pas"/>
 			<DCCReference Include="Downloaders\downPicSpoon.pas"/>
 			<DCCReference Include="Downloaders\downPlayFm.pas"/>
-			<DCCReference Include="Downloaders\downPlaywire.pas"/>
 			<DCCReference Include="Downloaders\downPlayZone.pas"/>
 			<DCCReference Include="Downloaders\downPolarCz.pas"/>
 			<DCCReference Include="Downloaders\downPracticalMethod.pas"/>
 			<DCCReference Include="Downloaders\downPrahovaHD.pas"/>
 			<DCCReference Include="Downloaders\downPrazdninyVTelci.pas"/>
-			<DCCReference Include="Downloaders\downPrimaCool.pas"/>
 			<DCCReference Include="Downloaders\downProglas.pas"/>
 			<DCCReference Include="Downloaders\downProstoPleer.pas"/>
 			<DCCReference Include="Downloaders\downPublicTV.pas"/>
@@ -252,11 +245,9 @@
 			<DCCReference Include="Downloaders\downRTA.pas"/>
 			<DCCReference Include="Downloaders\downRTA_Embed.pas"/>
 			<DCCReference Include="Downloaders\downRtlNl.pas"/>
-			<DCCReference Include="Downloaders\downRTVSSk.pas"/>
 			<DCCReference Include="Downloaders\downRuTube.pas"/>
 			<DCCReference Include="Downloaders\downSchoolOfCare.pas"/>
 			<DCCReference Include="Downloaders\downSerialOnline.pas"/>
-			<DCCReference Include="Downloaders\downSerialyCZ.pas"/>
 			<DCCReference Include="Downloaders\downSevenLoad.pas"/>
 			<DCCReference Include="Downloaders\downShackNews.pas"/>
 			<DCCReference Include="Downloaders\downSibnet.pas"/>
@@ -274,7 +265,6 @@
 			<DCCReference Include="Downloaders\downStreetFire.pas"/>
 			<DCCReference Include="Downloaders\downStudioPlus.pas"/>
 			<DCCReference Include="Downloaders\downStupidVideos.pas"/>
-			<DCCReference Include="Downloaders\downSTV.pas"/>
 			<DCCReference Include="Downloaders\downTangle.pas"/>
 			<DCCReference Include="Downloaders\downTeacherTube.pas"/>
 			<DCCReference Include="Downloaders\downTed.pas"/>
@@ -286,7 +276,6 @@
 			<DCCReference Include="Downloaders\downTotallyCrap.pas"/>
 			<DCCReference Include="Downloaders\downTV2Nord.pas"/>
 			<DCCReference Include="Downloaders\downTV4PlaySE.pas"/>
-			<DCCReference Include="Downloaders\downTV7.pas"/>
 			<DCCReference Include="Downloaders\downTVHNOnlineSk.pas"/>
 			<DCCReference Include="Downloaders\downTVLux.pas"/>
 			<DCCReference Include="Downloaders\downTVNoe.pas"/>
@@ -303,7 +292,6 @@
 			<DCCReference Include="Downloaders\downVideoAlbumyAzet.pas"/>
 			<DCCReference Include="Downloaders\downVideoBB.pas"/>
 			<DCCReference Include="Downloaders\downVideoClipsDump.pas"/>
-			<DCCReference Include="Downloaders\downVideoNurKz.pas"/>
 			<DCCReference Include="Downloaders\downVideoPortalSfTV.pas"/>
 			<DCCReference Include="Downloaders\downVideu.pas"/>
 			<DCCReference Include="Downloaders\downViiSk.pas"/>
@@ -330,12 +318,10 @@
 			<DCCReference Include="Downloaders\downZmozek.pas"/>
 			<DCCReference Include="Downloaders\XXX\xxx8teenXXX.pas"/>
 			<DCCReference Include="Downloaders\XXX\xxxAdultLoop.pas"/>
-			<DCCReference Include="Downloaders\XXX\xxxBeeg.pas"/>
 			<DCCReference Include="Downloaders\XXX\xxxBrazzers.pas"/>
 			<DCCReference Include="Downloaders\XXX\xxxCastingXXX.pas"/>
 			<DCCReference Include="Downloaders\XXX\xxxDachix.pas"/>
 			<DCCReference Include="Downloaders\XXX\xxxDancingBear.pas"/>
-			<DCCReference Include="Downloaders\XXX\xxxDansMovies.pas"/>
 			<DCCReference Include="Downloaders\XXX\xxxEmpFlix.pas"/>
 			<DCCReference Include="Downloaders\XXX\xxxEmpFlix_V2.pas"/>
 			<DCCReference Include="Downloaders\XXX\xxxExtremeTube.pas"/>
@@ -344,7 +330,6 @@
 			<DCCReference Include="Downloaders\XXX\xxxGavinXXX.pas"/>
 			<DCCReference Include="Downloaders\XXX\xxxGrinvi.pas"/>
 			<DCCReference Include="Downloaders\XXX\xxxHardSexTube.pas"/>
-			<DCCReference Include="Downloaders\XXX\xxxHeavyR.pas"/>
 			<DCCReference Include="Downloaders\XXX\xxxKeezMovies.pas"/>
 			<DCCReference Include="Downloaders\XXX\xxxKeezMovies_Embed.pas"/>
 			<DCCReference Include="Downloaders\XXX\xxxMachoVideo.pas"/>
@@ -353,7 +338,6 @@
 			<DCCReference Include="Downloaders\XXX\xxxMojePornoSK.pas"/>
 			<DCCReference Include="Downloaders\XXX\xxxMotherless.pas"/>
 			<DCCReference Include="Downloaders\XXX\xxxPornHost.pas"/>
-			<DCCReference Include="Downloaders\XXX\xxxPornHub.pas"/>
 			<DCCReference Include="Downloaders\XXX\xxxPornoTube.pas"/>
 			<DCCReference Include="Downloaders\XXX\xxxPornoZdarma.pas"/>
 			<DCCReference Include="Downloaders\XXX\xxxPornTube.pas"/>
@@ -363,7 +347,6 @@
 			<DCCReference Include="Downloaders\XXX\xxxSexDoma.pas"/>
 			<DCCReference Include="Downloaders\XXX\xxxShufuni.pas"/>
 			<DCCReference Include="Downloaders\XXX\xxxSlutLoad.pas"/>
-			<DCCReference Include="Downloaders\XXX\xxxSpankingTube.pas"/>
 			<DCCReference Include="Downloaders\XXX\xxxSpankWire.pas"/>
 			<DCCReference Include="Downloaders\XXX\xxxTeenMpegs.pas"/>
 			<DCCReference Include="Downloaders\XXX\xxxTheYNC.pas"/>
@@ -371,7 +354,6 @@
 			<DCCReference Include="Downloaders\XXX\xxxTube8.pas"/>
 			<DCCReference Include="Downloaders\XXX\xxxTubeSSS.pas"/>
 			<DCCReference Include="Downloaders\XXX\xxxXHamster.pas"/>
-			<DCCReference Include="Downloaders\XXX\xxxXNXX.pas"/>
 			<DCCReference Include="Downloaders\XXX\xxxXTube.pas"/>
 			<DCCReference Include="Downloaders\XXX\xxxXVideoHost.pas"/>
 			<DCCReference Include="Downloaders\XXX\xxxXVideos.pas"/>
@@ -427,27 +409,27 @@
 						<VersionInfo Name="IncludeVerInfo">True</VersionInfo>
 						<VersionInfo Name="AutoIncBuild">True</VersionInfo>
 						<VersionInfo Name="MajorVer">1</VersionInfo>
-						<VersionInfo Name="MinorVer">25</VersionInfo>
+						<VersionInfo Name="MinorVer">54</VersionInfo>
 						<VersionInfo Name="Release">0</VersionInfo>
-						<VersionInfo Name="Build">993</VersionInfo>
+						<VersionInfo Name="Build">1326</VersionInfo>
 						<VersionInfo Name="Debug">False</VersionInfo>
 						<VersionInfo Name="PreRelease">False</VersionInfo>
 						<VersionInfo Name="Special">False</VersionInfo>
 						<VersionInfo Name="Private">False</VersionInfo>
-						<VersionInfo Name="DLL">False</VersionInfo>
+						<VersionInfo Name="DLL">True</VersionInfo>
 						<VersionInfo Name="Locale">1033</VersionInfo>
-						<VersionInfo Name="CodePage">0</VersionInfo>
+						<VersionInfo Name="CodePage">1250</VersionInfo>
 					</VersionInfo>
 					<VersionInfoKeys>
 						<VersionInfoKeys Name="CompanyName">Pepak</VersionInfoKeys>
 						<VersionInfoKeys Name="FileDescription">YTD</VersionInfoKeys>
-						<VersionInfoKeys Name="FileVersion">1.25.0.993</VersionInfoKeys>
+						<VersionInfoKeys Name="FileVersion">1.54.0.1326</VersionInfoKeys>
 						<VersionInfoKeys Name="InternalName">YTD</VersionInfoKeys>
-						<VersionInfoKeys Name="LegalCopyright">(c) 2009-11 Pepak</VersionInfoKeys>
+						<VersionInfoKeys Name="LegalCopyright">(c) 2010-15 Pepak</VersionInfoKeys>
 						<VersionInfoKeys Name="LegalTrademarks"/>
 						<VersionInfoKeys Name="OriginalFilename">ytd.exe</VersionInfoKeys>
 						<VersionInfoKeys Name="ProductName">YTD</VersionInfoKeys>
-						<VersionInfoKeys Name="ProductVersion">1.25.0.987</VersionInfoKeys>
+						<VersionInfoKeys Name="ProductVersion">1.54.0.1324</VersionInfoKeys>
 						<VersionInfoKeys Name="Comments">http://www.pepak.net/ytd</VersionInfoKeys>
 					</VersionInfoKeys>
 				</Delphi.Personality>
