--- a/source/YTD.dproj
+++ b/source/YTD.dproj
@@ -210,10 +210,8 @@
 			<DCCReference Include="Downloaders\downNHL.pas"/>
 			<DCCReference Include="Downloaders\downNJoy.pas"/>
 			<DCCReference Include="Downloaders\downNothingToxic.pas"/>
-			<DCCReference Include="Downloaders\downNova.pas"/>
 			<DCCReference Include="Downloaders\downNovaMov.pas"/>
 			<DCCReference Include="Downloaders\downNovaMov_Embed.pas"/>
-			<DCCReference Include="Downloaders\downNovinky.pas"/>
 			<DCCReference Include="Downloaders\downNRSR.pas"/>
 			<DCCReference Include="Downloaders\downOKTeam.pas"/>
 			<DCCReference Include="Downloaders\downOsobnostiCZ.pas"/>
@@ -277,7 +275,6 @@
 			<DCCReference Include="Downloaders\downTVHNOnlineSk.pas"/>
 			<DCCReference Include="Downloaders\downTVLux.pas"/>
 			<DCCReference Include="Downloaders\downTVNoe.pas"/>
-			<DCCReference Include="Downloaders\downTVNovinySk.pas"/>
 			<DCCReference Include="Downloaders\downTVSpl.pas"/>
 			<DCCReference Include="Downloaders\downTVVysocina.pas"/>
 			<DCCReference Include="Downloaders\downTyzdenSk.pas"/>
@@ -297,7 +294,6 @@
 			<DCCReference Include="Downloaders\downVineCo.pas"/>
 			<DCCReference Include="Downloaders\downVitalMtb.pas"/>
 			<DCCReference Include="Downloaders\downVKontakteRuEmbed.pas"/>
-			<DCCReference Include="Downloaders\downVoyo.pas"/>
 			<DCCReference Include="Downloaders\downWeGame.pas"/>
 			<DCCReference Include="Downloaders\downWimp.pas"/>
 			<DCCReference Include="Downloaders\downWordPressTV.pas"/>
@@ -323,7 +319,6 @@
 			<DCCReference Include="Downloaders\XXX\xxxEmpFlix.pas"/>
 			<DCCReference Include="Downloaders\XXX\xxxEmpFlix_V2.pas"/>
 			<DCCReference Include="Downloaders\XXX\xxxExtremeTube.pas"/>
-			<DCCReference Include="Downloaders\XXX\xxxFreePornoZdarma.pas"/>
 			<DCCReference Include="Downloaders\XXX\xxxGavinXXX.pas"/>
 			<DCCReference Include="Downloaders\XXX\xxxGrinvi.pas"/>
 			<DCCReference Include="Downloaders\XXX\xxxHardSexTube.pas"/>
@@ -350,7 +345,6 @@
 			<DCCReference Include="Downloaders\XXX\xxxTnaFlix.pas"/>
 			<DCCReference Include="Downloaders\XXX\xxxTube8.pas"/>
 			<DCCReference Include="Downloaders\XXX\xxxTubeSSS.pas"/>
-			<DCCReference Include="Downloaders\XXX\xxxXHamster.pas"/>
 			<DCCReference Include="Downloaders\XXX\xxxXVideoHost.pas"/>
 			<DCCReference Include="Downloaders\XXX\xxxXVideos.pas"/>
 			<DCCReference Include="Downloaders\XXX\xxxYouJizz.pas"/>
@@ -399,7 +393,7 @@
 						<Parameters Name="UseLauncher">False</Parameters>
 						<Parameters Name="LoadAllSymbols">True</Parameters>
 						<Parameters Name="LoadUnspecifiedSymbols">False</Parameters>
-						<Parameters Name="RunParams">http://ocko.tv/den-nezavislosti-novy-utok-po-dvaceti-letech-top-tri-mimozemske-masky-nejvetsi-filmova-bitva-a-k-izr-/filmshot.aspx?c=A160621_140819_ocko-filmspot_kks</Parameters>
+						<Parameters Name="RunParams">--gui</Parameters>
 					</Parameters>
 					<VersionInfo>
 						<VersionInfo Name="IncludeVerInfo">True</VersionInfo>
@@ -407,25 +401,25 @@
 						<VersionInfo Name="MajorVer">1</VersionInfo>
 						<VersionInfo Name="MinorVer">56</VersionInfo>
 						<VersionInfo Name="Release">0</VersionInfo>
-						<VersionInfo Name="Build">1350</VersionInfo>
+						<VersionInfo Name="Build">1374</VersionInfo>
 						<VersionInfo Name="Debug">False</VersionInfo>
 						<VersionInfo Name="PreRelease">False</VersionInfo>
 						<VersionInfo Name="Special">False</VersionInfo>
 						<VersionInfo Name="Private">False</VersionInfo>
 						<VersionInfo Name="DLL">True</VersionInfo>
 						<VersionInfo Name="Locale">1033</VersionInfo>
-						<VersionInfo Name="CodePage">0</VersionInfo>
+						<VersionInfo Name="CodePage">1250</VersionInfo>
 					</VersionInfo>
 					<VersionInfoKeys>
 						<VersionInfoKeys Name="CompanyName">Pepak</VersionInfoKeys>
 						<VersionInfoKeys Name="FileDescription">YTD</VersionInfoKeys>
-						<VersionInfoKeys Name="FileVersion">1.56.0.1350</VersionInfoKeys>
+						<VersionInfoKeys Name="FileVersion">1.56.0.1374</VersionInfoKeys>
 						<VersionInfoKeys Name="InternalName">YTD</VersionInfoKeys>
 						<VersionInfoKeys Name="LegalCopyright">(c) 2010-16 Pepak</VersionInfoKeys>
 						<VersionInfoKeys Name="LegalTrademarks"/>
 						<VersionInfoKeys Name="OriginalFilename">ytd.exe</VersionInfoKeys>
 						<VersionInfoKeys Name="ProductName">YTD</VersionInfoKeys>
-						<VersionInfoKeys Name="ProductVersion">1.56.0.1350</VersionInfoKeys>
+						<VersionInfoKeys Name="ProductVersion">1.56.0.1374</VersionInfoKeys>
 						<VersionInfoKeys Name="Comments">http://www.pepak.net/ytd</VersionInfoKeys>
 					</VersionInfoKeys>
 				</Delphi.Personality>
