--- a/Source/YTD.lpi
+++ b/Source/YTD.lpi
@@ -17,104 +17,17 @@
     </General>
     <i18n>
       <EnableI18N Value="True"/>
-      <OutDir Value="Locale"/>
+      <OutDir Value="../Bin/locale"/>
     </i18n>
     <VersionInfo>
       <UseVersionInfo Value="True"/>
-      <AutoIncrementBuild Value="True"/>
       <MajorVersionNr Value="1"/>
-      <MinorVersionNr Value="64"/>
-      <BuildNr Value="24"/>
-      <StringTable ProductVersion="1.61"/>
+      <MinorVersionNr Value="65"/>
+      <BuildNr Value="11"/>
+      <StringTable ProductVersion="1.65"/>
     </VersionInfo>
-    <BuildModes Count="3">
+    <BuildModes Count="1">
       <Item1 Name="Default" Default="True"/>
-      <Item2 Name="Debug">
-        <CompilerOptions>
-          <Version Value="11"/>
-          <Target>
-            <Filename Value="../Bin/ytd.exe" ApplyConventions="False"/>
-          </Target>
-          <SearchPaths>
-            <IncludeFiles Value="Common;Base;Downloaders;Playlists;Lib/Synapse/source/lib;Lib/Pepak;$(ProjOutDir)"/>
-            <Libraries Value="../Bin"/>
-            <OtherUnitFiles Value="Common;Base;Downloaders;Playlists;Lib/Synapse/source/lib;Lib/Pepak;Lib/NativeXML;Lib/SciZipFile;Lib/PerlRegEx;Lib/SuperObject;Lib/lkJSON;Lib/RtmpDump;Lib/MSDL;GUI/LCL/Downloaders;Lib/DxGetText/Delphi2009"/>
-            <UnitOutputDirectory Value="Units"/>
-          </SearchPaths>
-          <Parsing>
-            <SyntaxOptions>
-              <SyntaxMode Value="Delphi"/>
-              <IncludeAssertionCode Value="True"/>
-            </SyntaxOptions>
-          </Parsing>
-          <CodeGeneration>
-            <Checks>
-              <IOChecks Value="True"/>
-              <RangeChecks Value="True"/>
-              <OverflowChecks Value="True"/>
-              <StackChecks Value="True"/>
-            </Checks>
-            <VerifyObjMethodCallValidity Value="True"/>
-            <TargetOS Value="win64"/>
-          </CodeGeneration>
-          <Linking>
-            <Debugging>
-              <DebugInfoType Value="dsDwarf2Set"/>
-              <UseHeaptrc Value="True"/>
-              <TrashVariables Value="True"/>
-              <UseExternalDbgSyms Value="True"/>
-            </Debugging>
-            <Options>
-              <Win32>
-                <GraphicApplication Value="True"/>
-              </Win32>
-            </Options>
-          </Linking>
-          <Other>
-            <CustomOptions Value="-dBorland -dVer150 -dDelphi7 -dCompiler6_Up -dPUREPASCAL -dPEPAK"/>
-          </Other>
-        </CompilerOptions>
-      </Item2>
-      <Item3 Name="Release">
-        <CompilerOptions>
-          <Version Value="11"/>
-          <Target>
-            <Filename Value="../Bin/ytd.exe" ApplyConventions="False"/>
-          </Target>
-          <SearchPaths>
-            <IncludeFiles Value="Common;Base;Downloaders;Playlists;Lib/Synapse/source/lib;Lib/Pepak;$(ProjOutDir)"/>
-            <Libraries Value="../Bin"/>
-            <OtherUnitFiles Value="Common;Base;Downloaders;Playlists;Lib/Synapse/source/lib;Lib/Pepak;Lib/NativeXML;Lib/SciZipFile;Lib/PerlRegEx;Lib/SuperObject;Lib/lkJSON;Lib/RtmpDump;Lib/MSDL;GUI/LCL/Downloaders;Lib/DxGetText/Delphi2009"/>
-            <UnitOutputDirectory Value="Units"/>
-          </SearchPaths>
-          <Parsing>
-            <SyntaxOptions>
-              <SyntaxMode Value="Delphi"/>
-            </SyntaxOptions>
-          </Parsing>
-          <CodeGeneration>
-            <SmartLinkUnit Value="True"/>
-            <TargetOS Value="win64"/>
-            <Optimizations>
-              <OptimizationLevel Value="3"/>
-            </Optimizations>
-          </CodeGeneration>
-          <Linking>
-            <Debugging>
-              <GenerateDebugInfo Value="False"/>
-            </Debugging>
-            <LinkSmart Value="True"/>
-            <Options>
-              <Win32>
-                <GraphicApplication Value="True"/>
-              </Win32>
-            </Options>
-          </Linking>
-          <Other>
-            <CustomOptions Value="-dBorland -dVer150 -dDelphi7 -dCompiler6_Up -dPUREPASCAL -dPEPAK"/>
-          </Other>
-        </CompilerOptions>
-      </Item3>
     </BuildModes>
     <PublishOptions>
       <Version Value="2"/>
@@ -1257,9 +1170,9 @@
       <Filename Value="../Bin/ytd.exe" ApplyConventions="False"/>
     </Target>
     <SearchPaths>
-      <IncludeFiles Value="Common;Base;Downloaders;Playlists;Lib/Synapse/source/lib;$(ProjOutDir)"/>
+      <IncludeFiles Value="Common;Base;Downloaders;Playlists;Lib/Synapse/source/lib;Lib/Pepak;$(ProjOutDir)"/>
       <Libraries Value="../Bin"/>
-      <OtherUnitFiles Value="Common;Base;Downloaders;Playlists;Lib/Synapse/source/lib;Lib/Pepak;Lib/NativeXML;Lib/SciZipFile;Lib/PerlRegEx;Lib/SuperObject;Lib/lkJSON;Lib/RtmpDump;Lib/MSDL;GUI/LCL/Downloaders;Lib/DxGetText/Delphi2009"/>
+      <OtherUnitFiles Value="Common;Base;Downloaders;Playlists;Lib/Synapse/source/lib;Lib/Pepak;Lib/NativeXML;Lib/SciZipFile;Lib/PerlRegEx;Lib/SuperObject;Lib/lkJSON;Lib/RtmpDump;Lib/MSDL;Lib/DxGetText/fpc;GUI/LCL/Downloaders"/>
       <UnitOutputDirectory Value="Units"/>
     </SearchPaths>
     <Parsing>
@@ -1267,9 +1180,6 @@
         <SyntaxMode Value="Delphi"/>
       </SyntaxOptions>
     </Parsing>
-    <CodeGeneration>
-      <TargetOS Value="win64"/>
-    </CodeGeneration>
     <Linking>
       <Debugging>
         <UseExternalDbgSyms Value="True"/>
